--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="agileits">
 		<h1>Trivia Login</h1>
 		<div class="w3-agileits-info">
-			<form class='form animate-form' id='form1' action="#" method="post">
+			<form class='form animate-form' id='form1' action="login.php" method="post">
 				<p class="w3agileits">Login Here</p>
 				<div class='form-group has-feedback w3ls'>
 					<label class='control-label sr-only' for='username'>Username</label> 
